[package]
name = "wasi-async-runtime"
version = "0.2.0"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/yoshuawuyts/wasm-http-tools"
documentation = "https://docs.rs/wasi-async-runtime"
description = "WASI-based async runtime library for Rust"
readme = "README.md"
edition = "2021"
keywords = []
categories = []
authors = ["Yoshua Wuyts <rust@yosh.is>"]

[features]
default = ["std"]
std = []

[dependencies]
hashbrown = { workspace = true }
slab = { workspace = true, default-features = false }
wasi = { workspace = true }

[dev-dependencies]
futures-concurrency = "7.4.0"
