[package]
name = "wasi-http-outgoing"
version = "0.0.1"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/yoshuawuyts/wasm-http-tools"
documentation = "https://docs.rs/wit-bindgen-http"
description = "WASI-based outgoing HTTP client library"
readme = "README.md"
edition = "2021"
keywords = []
categories = []
authors = ["Yoshua Wuyts <rust@yosh.is>"]

[features]

[dependencies]
async-iterator = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slab = { workspace = true }
url = { workspace = true }
wasi = { workspace = true }
wasi-async-runtime = { workspace = true }

[dev-dependencies]
futures-concurrency = "7.4.0"
